# smart_tg_bot

./: .env.sample  pyproject.toml
src/: bot.py  config.py  openapi_client.py  utils.py
src/resources/messages/: main.txt
